--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,8 @@ header > a > img {
 
 main {
     width: 98vw;
-    max-width: 133.33vh;
-    /* 4/3 = 1.333 */
-    height: 75vw;
-    /* 3/4 = .75 */
+    max-width: 133.33vh; /* 4/3 = 1.333 */
+    height: 75vw; /* 3/4 = .75 */
     max-height: 98vh;
     background-color: var(--black);
     direction: ltr;
@@ -86,8 +84,8 @@ a.album_selection {
 
 div.album_selection {
     display: inline-block;
-    width: 200px;
-    height: 245px;
+    width: 190px;
+    height: 235px;
     background: var(--background);
     border: 5px var(--background) solid;
     border-radius: 25px;
@@ -96,8 +94,8 @@ div.album_selection {
 }
 
 div.album_selection > img {
-    height: 200px;
-    width: 200px;
+    height: 190px;
+    width: 190px;
     border-radius: 25px;
 }
 
@@ -139,6 +137,7 @@ aside.song {
 aside.song > iframe {
     border-radius: 20px;
     height: 80px;
+    box-shadow: var(--black) 0px 0px 10px;
 }
 
 ::-webkit-scrollbar {
